test: expand integration test coverage for filters lookups and task control (#515)
Add comprehensive integration test cases in FilterIntegrationTest, LookupIntegrationTest, and TaskControlAdvancedTest according to specifications in docs/implementation/Variables-Templating.md and docs/implementation/Task-Control.md.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>
Co-authored-by: yamanakahirofumi <14960462+yamanakahirofumi@users.noreply.github.com>